--- a/app/src/main/res/layout/childdrylistlayout.xml
+++ b/app/src/main/res/layout/childdrylistlayout.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:weightSum="4">
         <TextView
-            android:layout_width="90dp"
+            android:layout_width="80dp"
             android:id="@+id/serName"
             android:layout_height="wrap_content"
             android:text="Service"
@@ -25,6 +25,39 @@
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="wrap_content"
+        android:id="@+id/recycler"
+        android:background="@color/colorPrimary">
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+        android:layout_width="80dp"
+        android:id="@+id/subTotal"
+        android:layout_height="wrap_content"
+        android:text="0.00"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_weight="1"
+        android:paddingEnd="5dp"
+        android:paddingStart="5dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        />
+
+    <TextView
+        android:layout_width="80dp"
+        android:id="@+id/amount"
+        android:layout_height="wrap_content"
+        android:text="0.00"
+        android:textColor="@color/black"
+        android:background="@color/colorPrimary"
+        android:textStyle="bold"
+        android:layout_weight="1"
+        android:paddingEnd="5dp"
+        android:paddingStart="5dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        />
 
 </LinearLayout>
