--- a/app/src/main/res/layout/childstationwashlayout.xml
+++ b/app/src/main/res/layout/childstationwashlayout.xml
@@ -7,10 +7,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:weightSum="4">
         <TextView
             android:layout_width="90dp"
             android:id="@+id/serName"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:text="Service"
             android:textColor="@color/black"
@@ -21,6 +23,13 @@
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             />
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/recycler"
+            android:background="@color/colorPrimary"
+            />
+
     </LinearLayout>
 
 </LinearLayout>
