--- a/app/src/main/res/layout/washstationtotallayout.xml
+++ b/app/src/main/res/layout/washstationtotallayout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -10,25 +10,15 @@
 
         android:weightSum="4">
         <TextView
-            android:layout_width="90dp"
+            android:layout_width="match_parent"
             android:id="@+id/serName"
-
             android:layout_height="wrap_content"
-            android:text="Service"
             android:textColor="@color/black"
-            android:textStyle="bold"
             android:layout_weight="1"
-            android:paddingEnd="5dp"
+            android:text="10,000.00"
             android:paddingStart="5dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            />
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:id="@+id/recycler"
-            android:background="@color/colorPrimary"
             />
 
     </LinearLayout>
