--- a/app/src/main/res/layout/views_profile.xml
+++ b/app/src/main/res/layout/views_profile.xml
@@ -161,6 +161,12 @@
                 android:layout_marginTop="20dp"
                 android:orientation="horizontal">
 
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/logo1"
+                    android:visibility="gone"/>
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
