--- a/app/src/main/res/layout/views_service.xml
+++ b/app/src/main/res/layout/views_service.xml
@@ -95,6 +95,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 
 </LinearLayout>
