--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
+        android:layout_gravity="center_horizontal"
         android:elevation="6dp"
         app:tabTextColor="@color/colorPrimaryDark"
         android:minHeight="?attr/actionBarSize"
