--- a/app/src/main/res/layout/summarylistlayout.xml
+++ b/app/src/main/res/layout/summarylistlayout.xml
@@ -3,6 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:weightSum="6"
     android:background="@color/colorPrimary"
@@ -106,16 +107,14 @@
 
                     </LinearLayout>
 
+
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/listView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:nestedScrollingEnabled="false" />
-
                 </RelativeLayout>
-
             </LinearLayout>
-
         </androidx.core.widget.NestedScrollView>
 
         <LinearLayout
