--- a/app/src/main/res/layout/views_summary.xml
+++ b/app/src/main/res/layout/views_summary.xml
@@ -70,7 +70,7 @@
                 <TextView
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     android:textColor="@color/black"
                     android:layout_weight="1"
                     android:textStyle="bold"
@@ -81,7 +81,7 @@
                     android:layout_width="170dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     android:textColor="@color/black"
                     android:textStyle="bold" />
 
